# SharpsenBox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  LaunchBox.ui  README.md  layout.h
DesktopAplication/: CMakeLists.txt  CMakeSettings.json  LaunchBoxInfo.json  QtPathsExample.json  Rest.json  Sylio.json  conanfile.txt  graph_info.json
DesktopAplication/CmakeModules/: Config.cmake
DesktopAplication/Config/LaunchBox/: AppInfo.json  FileList.json  Games.json  LaunchBoxInfo.json  Path-0.11.json
DesktopAplication/Config/Updater/: AppInfo.json  Games.json  LaunchBoxInfo.json
DesktopAplication/Gui/: Aplication.qml  AppUpdater.qml  BottomBar.qml  BottomBar.qml.autosave  CustomButton.qml  ExampleOne.qml  GameChoser.qml  GameChoserBlock.qml  GameSettings.qml  Home.qml  InstallPopOut.qml  LaunchBox.qml  LaunchBox.qml.autosave  LaunchBox.qmlproject  LaunchBox.qmlproject.qtds  LaunchBox.qrc  LeftBar.qml  LoadingBar.qml  MainChecker.qml  PopOutDialog.qml  PopOutInfo.qml  Rest.qml  Settings.qml  Sylio.qml  TopBar.qml  WebGamePage.qml
DesktopAplication/Gui/content/: youtubeLoader.html
DesktopAplication/Source/: CMakeLists.txt
DesktopAplication/Source/App/: CMakeLists.txt
DesktopAplication/Source/AppBackend/: AppBackend.cpp  AppBackend.hpp  CMakeLists.txt  IComponent.hpp  IQmlObject.hpp  ObjectRepo.cpp  ObjectRepo.hpp
DesktopAplication/Source/AppLauncher/: Launcher.csproj
DesktopAplication/Source/AppUpdateChecker/: AppUpdateChecker.cpp  AppUpdateChecker.hpp  CMakeLists.txt
DesktopAplication/Source/AppUpdater/: AppUpdater.cpp  AppUpdater.hpp  CMakeLists.txt  GameParser.cpp  GameParser.hpp
DesktopAplication/Source/Application/: CMakeLists.txt
DesktopAplication/Source/ApplicationUpdater/: CMakeLists.txt
DesktopAplication/Source/BottomBar/: BottomBar.cpp  BottomBar.hpp  CMakeLists.txt  FtpDownloader.cpp  FtpDownloader.hpp
DesktopAplication/Source/Component/: CMakeLists.txt  ComponentRegister.cpp  IComponent.hpp
DesktopAplication/Source/Config/: CMakeLists.txt  Config.cpp  Config.hpp  Game.cpp  Game.hpp
DesktopAplication/Source/Dialog/: CMakeLists.txt  Dialog.cpp  Dialog.hpp
DesktopAplication/Source/DownloadManager/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.hpp  FtpDownloader.cpp  FtpDownloader.hpp
DesktopAplication/Source/Framework/: CMakeLists.txt  Program.cs  main.cpp
DesktopAplication/Source/GameExecutor/: CMakeLists.txt  GameExecutor.cpp  GameExecutor.hpp
DesktopAplication/Source/GameInstaller/: CMakeLists.txt  GameInstaller.cpp  GameInstaller.hpp  GameUninstaller.cpp  GameUninstaller.hpp
DesktopAplication/Source/GameManager/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  GameUninstaller.cpp  GameUninstaller.hpp
DesktopAplication/Source/InstalationManager/: AppInfoParser.cpp  AppInfoParser.hpp  ArchieveInstaller.cpp  ArchieveInstaller.hpp  CMakeLists.txt  Cleanup.cpp  Cleanup.hpp  Downloader.cpp  Downloader.hpp  FileListParser.cpp  FileListParser.hpp  FtpDownloader.cpp  FtpDownloader.hpp  GameFileRemover.cpp  GameFileRemover.hpp  GameParser.cpp  GameParser.hpp  IRunnable.hpp  ImElement.hpp  InstalationManager.cpp  InstalationManager.hpp  LoadingBarManager.cpp  LoadingBarManager.hpp  Uninstaller.cpp  Uninstaller.hpp  UpdateInfo.cpp  UpdateInfo.hpp  ZlibInstaller.cpp  ZlibInstaller.hpp
DesktopAplication/Source/JsonParsers/: CMakeLists (2).txt
DesktopAplication/Source/LaunchBox/: CMakeLists.txt  main.cpp
DesktopAplication/Source/LaunchBoxUpdater/: CMakeLists.txt  main.cpp
DesktopAplication/Source/LoadingBar/: CMakeLists.txt  LoadingBar.cpp  LoadingBar.hpp
DesktopAplication/Source/MainWindow/: Button.cpp  Button.hpp  CMakeLists.txt
DesktopAplication/Source/QConfig/: CMakeLists.txt  Config.cpp  Config.hpp
DesktopAplication/Source/QDialog/: CMakeLists.txt  Dialog.cpp  Dialog.hpp
DesktopAplication/Source/QGameManager/: CMakeLists.txt  GameManager.cpp  GameManager.hpp  GameUninstaller.cpp
DesktopAplication/Source/QLoadingBar/: CMakeLists.txt  LoadingBar.cpp  LoadingBar.hpp
DesktopAplication/Source/UpdateManager/: ArchieveInstaller.cpp  CMakeLists.txt  Downloader.cpp  Downloader.hpp  FileListParser.cpp  FileListParser.hpp  GameParser.cpp  UpdateInfo.hpp  UpdateManager.cpp  UpdateManager.hpp
Framework/: CMakeLists.txt  CustomButton.qml  LaunchBox.qml  LaunchBox.qmlproject.qtds  LaunchBox.qmlrc  LaunchBox.qrc  ResizingFrames.qml  TopBar.qml  backend.cpp  backend.h  calqlatr.qmlproject  calqlatr.qmlproject.qtds  main.cpp
Framework/content/: Display.qml  calculator.js
LaunchBox/: CMakeLists.txt  CMakeSettings.json  LaunchBox.cpp  LaunchBox.h  conanfile.txt  graph_info.json
LaunchBox/CmakeModules/: Config.cmake
LaunchBox/Config/LaunchBox/: Games.json  LaunchBoxInfo.json
LaunchBox/Config/Updater/: Games.json
LaunchBox/Gui/: AppUpdater.qml  AppUpdater.qrc  BottomBar.qml  CustomButton.qml  ExampleOne.qml  GameChoser.qml  GameChoserBlock.qml  Home.qml  InstallPopOut.qml  LaunchBox.qml  LaunchBox.qmlproject  LaunchBox.qmlproject.qtds  LaunchBox.qrc  LeftBar.qml  PopOutDialog.qml  PopOutInfo.qml  Settings.qml  clear.html
LaunchBox/Source/: CMakeLists.txt
LaunchBox/Source/AppLauncher/: Launcher.csproj  Program.cs
LaunchBox/Source/QConfig/: CMakeLists.txt  Config.cpp
LaunchBox/Source/UpdateManager/: AppInfoParser.cpp  AppInfoParser.hpp  ArchieveInstaller.cpp  ArchieveInstaller.hpp  CMakeLists.txt  Cleanup.cpp  Cleanup.hpp  Downloader.cpp  Downloader.hpp  FileListParser.cpp  FileListParser.hpp  GameParser.cpp  (+7 more)
SharpsenBox/: .gitignore  CMakeLists.txt  CMakeSettings.json  QtPathsExample.json  conanfile.txt  graph_info.json
SharpsenBox/CmakeModules/: Config.cmake
SharpsenBox/Gui/: Aplication.qml  AppUpdater.qml  AppUpdater.qrc  CustomButton.qml  ExampleOne.qml  GameChoserBlock.qml  GameSettings.qml  Home.qml  LaunchBox.qmlproject.qtds  LaunchBox.qmlproject.qtds.3f70a75  LaunchBox.qmlproject.qtds.851bbd7  LaunchBox.qmlproject.qtds.ce242b9  LeftBar.qml  PopOutDialog.qml  SharpsenBox.qml  SharpsenBox.qmlproject  SharpsenBox.qmlproject.qtds.ce242b9  SharpsenBox.qrc
Source/Framework/: CMakeLists.txt  main.cpp
(+287 files in other folders)
